<resources>
    <string name="app_name">Weather</string>
    <string name="hint">Enter city</string>
    <string name="action_settings">Settings</string>
    <string name="language">Language</string>
    <string name="language_eng">English</string>
    <string name="language_rus">Russian</string>
    <string name="units">Units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="action_history">History</string>
    <string name="action_about">About</string>
    <string name="err_msg">Network error…</string>
    <string name="saveBtn">Save</string>
    <string name="toolbarPlace">Search bar location</string>
    <string name="weatherForecast">Weather forecast</string>
    <string-array name="language">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="langNum">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="tempr">
        <item>Цельсий</item>
        <item>Фаренгейт</item>
    </string-array>
    <string-array name="TempNum">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="choose_lang">Language</string>
    <string name="fitstrun_text">Похоже это первый запуск приложения!\n
        Сейчас Вы будете переправлены\n
        на страницу настроек.\n
        Спасибо за установку приложения!
    </string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="update">Updated at:</string>
    <string name="request_settings">Request settings</string>
    <string name="choose_lang_summary">Click to select a language</string>
    <string name="temp_scale">Temperature scale</string>
    <string name="def_city">Default city</string>
    <string name="disp_settings">Display Settings</string>
    <string name="place_tb">Bottom search bar</string>
    <string name="choose_temp_scale">Choose temperature scale</string>
    <string name="choose_time">24-hour time</string>
    <string name="dt"><![CDATA[Date &amp; Time]]></string>
    <string name="temperature">Temperature</string>
    <string-array name="dateFormatNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="DateFormat">
        <item>dd MMMM yy</item>
        <item></item>
    </string-array>
</resources>
