<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/roundRectView2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleView"
        app:shape_roundRect_bottomLeftRadius="10dp"
        app:shape_roundRect_bottomRightRadius="10dp"
        app:shape_roundRect_topLeftRadius="10dp"
        app:shape_roundRect_topRightRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b0292c31"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forecastDate"
                style="@style/MaxTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="6dp"
                android:text="Date"/>



            <TextView
                android:id="@+id/forecastTime"
                style="@style/MaxTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="0dp"
                android:text="Time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/clr_day">

                </ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/temperature" />

                        <TextView
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/humidity" />

                        <TextView
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/pressure" />

                        <TextView
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/wind" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/temperature_item"
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="temp">

                        </TextView>

                        <TextView
                            android:id="@+id/humidity"
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="hum" />

                        <TextView
                            android:id="@+id/pressure"
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="press" />

                        <TextView
                            android:id="@+id/wind"
                            style="@style/MaxTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="wind" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </com.github.florent37.shapeofview.shapes.RoundRectView>
</android.support.v7.widget.CardView>